# json_analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md  agent_tools.md  config.py  convert_raw.py  docker-compose.yml  eval_report.md  eval_run.py  eval_value.py  eval_value_report.md  gen_metrics.py  gen_metrics_agile.py  metrics_pipeline.md  pyproject.toml  raw_struct_data.jsonc  scenarios_employee.md  scenarios_manager.md
analyzer/: __init__.py  agent.py  analytics.py  cli.py  embeddings.py  llm.py  loader.py  pg_cache.py  sqlite_store.py  tools.py
eval_out/: _digest.txt  _mkdigest.py  sample_declining_run.json  sample_good_run.json  sample_rising_run.json  sample_stable_run.json  sample_stable_snapshot.json  sample_weak_run.json  sample_weak_snapshot.json  test_metrics_agile_run.json  test_metrics_run.json
eval_out/verify/: sample_good_run.json  sample_good_snapshot.json  test_metrics_agile_run.json  test_metrics_agile_snapshot.json  test_metrics_run.json
eval_out/verify2/: sample_good_run.json  test_metrics_run.json  test_metrics_snapshot.json
eval_out/verify3/: sample_declining_run.json  sample_declining_snapshot.json  sample_rising_run.json  sample_rising_snapshot.json  test_metrics_agile_run.json
eval_value_out/: _digest.txt  sample_declining.json  sample_good.json  sample_rising.json  sample_stable.json  sample_weak.json  test_metrics.json  test_metrics_agile.json
samples/: raw_sample.json  raw_sample_converted.json  sample_declining.json  sample_good.json  sample_rising.json  sample_stable.json  sample_weak.json  test_metrics_agile.json
(+5 files in other folders)
