[project]
name = "json-analyzer"
version = "0.1.0"
description = "Универсальный агент-аналитик метрик: in-memory SQLite + pgvector кэш эмбеддингов"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-gigachat>=0.3",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
json-analyzer = "analyzer.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["analyzer"]
py-modules = ["config"]
